--- a/printama/src/main/res/values/strings.xml
+++ b/printama/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_printer">Printerni tanlang</string>
+    <string name="test">Test</string>
+    <string name="save">Saqlash</string>
 
 </resources>
